[package]
name = "clash2sing-box"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
yaml-rust = "0.4"
clap= {version = "4.0.18", features = ["derive"] }
reqwest = "0.11.12"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
