[package]
name = "clash2sing-box"
version = "0.2.0"
edition = "2021"

[profile.release]
panic = 'abort'

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
yaml-rust = "0.4"
clap = { version = "4.0.18", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
futures = "0.3"
