[package]
name = "ctos-web"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[dependencies]
ctos = { path = "../ctos" }
gloo = "0.8.0"
js-sys = "0.3.63"
wasm-bindgen = "0.2.86"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
