[package]
name = "ctos-web"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[dependencies]
base64 = "0.21.1"
ctos = { path = "../ctos" }
gloo = "0.8.0"
js-sys = "0.3.63"
serde_json = "1.0.96"
wasm-bindgen = "0.2.86"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer"]
